testing swipe carousel

--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!-->
+
 <html class="no-js" lang="en">
-<!--<![endif]-->
+
 
 <head>
     <meta charset="utf-8">
@@ -12,39 +9,29 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-
-    <!--Google Font link-->
     <link
         href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
-
-
     <link rel="stylesheet" href="assets/css/animate.css">
     <link rel="stylesheet" href="assets/css/iconfont.css">
     <link rel="stylesheet" href="assets/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/magnific-popup.css">
     <link rel="stylesheet" href="assets/css/bootsnav.css">
-
-
-    <!--For Plugins external css-->
     <link rel="stylesheet" href="assets/css/plugins.css" />
-
-    <!--Theme custom css -->
     <link rel="stylesheet" href="assets/css/style.css">
-    <!--<link rel="stylesheet" href="assets/css/colors/maron.css">-->
-
-    <!--Theme Responsive css-->
     <link rel="stylesheet" href="assets/css/responsive.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <script src="https://kit.fontawesome.com/a29a9f737a.js"></script>
     <script src="assets/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+
+
 </head>
 
 <body data-spy="scroll" data-target="#navbar-menu" data-offset="110">
-
-
     <!-- Preloader -->
     <div id="loading">
         <div id="loading-center">
@@ -57,12 +44,8 @@
         </div>
     </div>
     <!--End off Preloader -->
-
-
     <div class="culmn">
         <!--Home page style-->
-
-
         <nav class="navbar navbar-default bootsnav navbar-fixed white">
             <!-- Start Top Search -->
             <div class="top-search">
@@ -75,15 +58,12 @@
                 </div>
             </div>
             <!-- End Top Search -->
-
-
             <div class="container">
                 <div class="attr-nav">
                     <ul>
                         <li class="search"><a href="#"><i class="fa fa-search"></i></a></li>
                     </ul>
                 </div>
-
                 <!-- Start Header Navigation -->
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
@@ -93,10 +73,8 @@
                         <img class="nav-image" src="assets/images/optimalevolutionnavbar.png"
                             alt="optimal-evolution-logo" />
                     </a>
-
                 </div>
                 <!-- End Header Navigation -->
-
                 <!-- navbar menu -->
                 <div class="collapse navbar-collapse" id="navbar-menu">
                     <ul class="nav navbar-nav navbar-right">
@@ -108,9 +86,7 @@
                     </ul>
                 </div>
             </div>
-
         </nav>
-
         <!--Home Sections-->
         <section id="home" class="home bg-black fix">
             <div class="overlay"></div>
@@ -129,26 +105,18 @@
                                             <h1 class="text-white">Performance Coaching</h1>
                                             <h3 class="text-white">Sign up for a free consultation!</h3>
                                         </div>
-
                                         <div class="home_btns m-top-40">
                                             <a href="" class="btn btn-primary m-top-20">Sign Me Up!</a>
                                             <a href="" class="btn btn-default m-top-20">View Our Services</a>
                                         </div>
                                     </div>
-                                </div><!-- End off slid item -->
-
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!--End off row-->
             </div>
-            <!--End off container -->
         </section>
-        <!--end off Home Sections-->
-
-
-
         <!--Featured Section-->
         <section id="features" class="features bg-grey">
             <div class="container">
@@ -193,7 +161,8 @@
                                         portion
                                         of the day. Our coaches will assess what areas of your life are out of balance
                                         and help you
-                                        create a plan to restore balance in your life.</p>
+                                        create a plan to restore balance in your life.
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -208,17 +177,15 @@
                                         we do
                                         the things we do. Our ultimate goal is to teach you how to create and maintain
                                         healthy habits
-                                        so that you can take this practice with you wherever you go.</p>
+                                        so that you can take this practice with you wherever you go.
+                                    </p>
                                 </div>
                             </div>
                         </div>
-
                     </div>
-                </div><!-- End off row -->
-            </div><!-- End off container -->
-        </section><!-- End off Featured Section-->
-
-
+                </div>
+            </div>
+        </section>
         <!--Desktop Services-->
         <section id="services-holistic" class="business bg-blue roomy-70">
             <div class="business_overlay"></div>
@@ -228,7 +195,6 @@
                         <div class="col-md-5">
                             <div class="business_item sm-m-top-50">
                                 <h2 class="text-uppercase text-white">Holistic Lifestyle Coaching</h2>
-
                                 <p class="m-top-20 text-white">Holistic lifestyle coaching is an integrative service
                                     that guides clients through a personalized program to help them achieve optimal
                                     health
@@ -240,11 +206,10 @@
                                     your
                                     dream is to change the world or just to stay healthy enough to enjoy and experience
                                     life,
-                                    this program is for you. </p>
-
+                                    this program is for you.
+                                </p>
                             </div>
                         </div>
-
                         <div class="col-md-4">
                             <br>
                             <br>
@@ -264,7 +229,6 @@
                                 <li><i class="fa  fa-arrow-circle-right"></i> Monthly consultation/reassissment</li>
                             </ul>
                         </div>
-
                         <div class="col-md-3">
                             <div class="business_item">
                                 <div class="business_img">
@@ -281,7 +245,6 @@
                                 </div>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
@@ -301,11 +264,10 @@
                                     proven training methods to maximize your performance and minimize injury. We
                                     recognize that what happens outside of training is just as important as what happens
                                     during training. Our coaches are trained to teach athletes proper technique and
-                                    mechanics as well as protocols to maximize recovery and well-being.</p>
-
+                                    mechanics as well as protocols to maximize recovery and well-being.
+                                </p>
                             </div>
                         </div>
-
                         <div class="col-md-4">
                             <ul class="text-white">
                                 <li><i class="fa  fa-arrow-circle-right"></i> Unlimited access to coaching sessions</li>
@@ -327,7 +289,6 @@
                                 <li><i class="fa  fa-arrow-circle-right"></i> Train and compete with the team</li>
                             </ul>
                         </div>
-
                         <div class="col-md-3">
                             <div class="business_item">
                                 <div class="business_img">
@@ -344,7 +305,6 @@
                                 </div>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
@@ -364,11 +324,10 @@
                                     make the experience as real as having a coach by your side through the use of
                                     technology. Coaches and athletes will work together to create a training, nutrition,
                                     and lifestyle plan to help athletes become the strongest, fastest, most resilient
-                                    version of themselves.</p>
-
+                                    version of themselves.
+                                </p>
                             </div>
                         </div>
-
                         <div class="col-md-4">
                             <ul class="text-white">
                                 <br>
@@ -387,7 +346,6 @@
                                 <li><i class="fa  fa-arrow-circle-right"></i> Monthly consultation/reassessment</li>
                             </ul>
                         </div>
-
                         <div class="col-md-3">
                             <div class="business_item">
                                 <div class="business_img">
@@ -404,7 +362,6 @@
                                 </div>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
@@ -418,15 +375,13 @@
                         <div class="col-md-5">
                             <div class="business_item sm-m-top-50">
                                 <h2 class="text-uppercase text-white">Team Training</h2>
-
                                 <p class="m-top-20 text-white">Team training is for athletes that just want to train and
                                     compete with the team. Team athletes will work with coaches to develop a customized
                                     training program and have the opportunity to train and compete alongside all the
-                                    other dedicated OE athletes.</p>
-
+                                    other dedicated OE athletes.
+                                </p>
                             </div>
                         </div>
-
                         <div class="col-md-4">
                             <ul class="text-white">
                                 <br>
@@ -442,7 +397,6 @@
                                 <li><i class="fa  fa-arrow-circle-right"></i> Daily performance checklist</li>
                             </ul>
                         </div>
-
                         <div class="col-md-3">
                             <div class="business_item">
                                 <div class="business_img">
@@ -457,7 +411,6 @@
                                 </div>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
@@ -471,16 +424,14 @@
                         <div class="col-md-5">
                             <div class="business_item sm-m-top-50">
                                 <h2 class="text-uppercase text-white">Consultation</h2>
-
                                 <p class="m-top-20 text-white">During the initial consultation coaches will review the
                                     diet and lifestyle questionnaires, align clients to their dreams and goals, and work
                                     together to create a plan of action. Consultations are also available for
                                     individuals that would like a personal, open-ended session with a coach without
-                                    having to commit to a monthly plan. </p>
-
+                                    having to commit to a monthly plan.
+                                </p>
                             </div>
                         </div>
-
                         <div class="col-md-4">
                             <ul class="text-white">
                                 <br>
@@ -497,7 +448,6 @@
                                     action</li>
                             </ul>
                         </div>
-
                         <div class="col-md-3">
                             <div class="business_item">
                                 <div class="business_img">
@@ -515,16 +465,13 @@
                                 </div>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
         </section>
-
         <!-- End off Desktop Services -->
 
-        <!--product section-->
-
+        <!-- Coaches Section-->
         <section id="coaches" class="team bg-grey fix">
             <div class="container">
                 <div class="main_team roomy-80">
@@ -532,7 +479,6 @@
                         <h2 class="text-uppercase">Coaches</h2>
                         <h5>We have a talent with amazing skill</h5>
                     </div>
-
                     <div>
                         <div>
                             <div class="container">
@@ -584,9 +530,7 @@
                                             </div>
                                         </div>
                                     </div>
-
                                     <div class="col-lg-2"></div>
-
                                     <div class="col-lg-5">
                                         <div class="team_item team_skill">
                                             <div class="team_author">
@@ -656,16 +600,14 @@
                                             </div>
                                         </div>
                                     </div>
-
                                 </div>
                             </div>
                         </div>
-                    </div><!-- End off row -->
-                </div><!-- End off container -->
-        </section><!-- End off Product section -->
-
+                    </div>
+                </div>
+        </section>
+        <!-- End of Coaches Section -->
         <!--About Us Section-->
-
         <section id="aboutus" class="dialogue bg-white roomy-80">
             <div class="container">
                 <div class="row">
@@ -710,14 +652,23 @@
                 </div>
             </div>
         </section>
-
-        <!-- End About Us Section -->
     </div>
 
-
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="assets/images/optimalevolution.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item active">
+                <img src="assets/images/optimalevolution.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item active">
+                <img src="assets/images/optimalevolution.png" class="d-block w-100" alt="...">
+            </div>
+        </div>
+    </div>
 
     <footer id="contact" class="footer action-lage bg-black p-top-80">
-        <!--<div class="action-lage"></div>-->
         <div class="container">
             <div class="row">
                 <div class="widget_area">
@@ -747,8 +698,8 @@
                                     <a href="mailto:nathan@optimalevolution.co">nathan@optimalevolution.co </a>
                                 </div>
                             </div>
-                        </div><!-- End off widget item -->
-                    </div><!-- End off col-md-3 -->
+                        </div>
+                    </div>
 
                     <div class="col-md-6">
                         <div class="widget_item widget_newsletter sm-m-top-50">
@@ -771,8 +722,8 @@
                                 <li><a href=""><i class="fab fa-linkedin"></i></a> -</li>
                             </ul>
 
-                        </div><!-- End off widget item -->
-                    </div><!-- End off col-md-3 -->
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -787,11 +738,6 @@
         </div>
     </footer>
 
-
-
-
-    <!-- </!--end> -->
-
     <!-- JS includes -->
 
     <script src="assets/js/vendor/jquery-1.11.2.min.js"></script>
@@ -800,8 +746,6 @@
     <script src="assets/js/jquery.magnific-popup.js"></script>
     <script src="assets/js/jquery.easing.1.3.js"></script>
     <script src="assets/js/bootsnav.js"></script>
-
-
 
     <script src="assets/js/plugins.js"></script>
     <script src="assets/js/main.js"></script>
