deleted swipe carousel

--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
     <link rel="stylesheet" href="assets/css/plugins.css" />
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <script src="https://kit.fontawesome.com/a29a9f737a.js"></script>
     <script src="assets/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
@@ -654,19 +652,7 @@
         </section>
     </div>
 
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="assets/images/optimalevolution.png" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item active">
-                <img src="assets/images/optimalevolution.png" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item active">
-                <img src="assets/images/optimalevolution.png" class="d-block w-100" alt="...">
-            </div>
-        </div>
-    </div>
+
 
     <footer id="contact" class="footer action-lage bg-black p-top-80">
         <div class="container">
@@ -681,7 +667,8 @@
                                     <h6 class="text-white">Location</h6>
                                     <p>
                                         South Bend, IN <br>
-                                        United States</p>
+                                        United States
+                                    </p>
                                 </div>
                             </div>
                             <div class="widget_ab_item m-top-30">
