php submit form done. Web and Mobile.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <li><a href="#services">Services</a></li>
                         <li><a href="#coaches">Coaches</a></li>
                         <li><a href="#aboutus">About Us</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="php/php_index.php">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -104,8 +104,8 @@
                                             <h3 class="text-white">Sign up for a free consultation!</h3>
                                         </div>
                                         <div class="home_btns m-top-40">
-                                            <a href="" class="btn btn-primary m-top-20">Sign Me Up!</a>
-                                            <a href="" class="btn btn-default m-top-20">View Our Services</a>
+                                            <a href="php/php_index.php" class="btn btn-primary m-top-20">Sign Me Up!</a>
+                                            <a href="#services" class="btn btn-default m-top-20">View Our Services</a>
                                         </div>
                                     </div>
                                 </div>
@@ -185,7 +185,7 @@
             </div>
         </section>
         <!--Desktop Services-->
-        <section id="services-holistic" class="business bg-blue roomy-70 desktop-service">
+        <section id="services" class="business bg-blue roomy-70 desktop-service">
             <div class="business_overlay"></div>
             <div class="container">
                 <div class="row">
@@ -238,7 +238,7 @@
                                         <li><i class="fas  fa-angle-right"></i> 3 Months: $200/month</li>
                                     </ul>
                                     <div class="business_btn m-top-50">
-                                        <a href="" class="btn btn-default m-top-20">Sign Up!</a>
+                                        <a href="php/php_index.php" class="btn btn-default m-top-20">Sign Up!</a>
                                     </div>
                                 </div>
                             </div>
@@ -298,7 +298,7 @@
                                         <li><i class="fas  fa-angle-right"></i> 3 Months: $300/month</li>
                                     </ul>
                                     <div class="business_btn m-top-50">
-                                        <a href="" class="btn btn-default m-top-20">Sign Up!</a>
+                                        <a href="php/php_index.php" class="btn btn-default m-top-20">Sign Up!</a>
                                     </div>
                                 </div>
                             </div>
@@ -355,7 +355,7 @@
                                         <li><i class="fas  fa-angle-right"></i> 3 Months: $250/month</li>
                                     </ul>
                                     <div class="business_btn m-top-50">
-                                        <a href="" class="btn btn-default m-top-20">Sign Up!</a>
+                                        <a href="php/php_index.php" class="btn btn-default m-top-20">Sign Up!</a>
                                     </div>
                                 </div>
                             </div>
@@ -404,7 +404,7 @@
                                         <li><i class="fas  fa-angle-right"></i> Month to Month: $100/month</li>
                                     </ul>
                                     <div class="business_btn m-top-50">
-                                        <a href="" class="btn btn-default m-top-20">Sign Up!</a>
+                                        <a href="php/php_index.php" class="btn btn-default m-top-20">Sign Up!</a>
                                     </div>
                                 </div>
                             </div>
@@ -458,7 +458,7 @@
                                             coaching</li>
                                     </ul>
                                     <div class="business_btn m-top-50">
-                                        <a href="" class="btn btn-default m-top-20">Sign Up!</a>
+                                        <a href="php/php_index.php" class="btn btn-default m-top-20">Sign Up!</a>
                                     </div>
                                 </div>
                             </div>
@@ -883,10 +883,10 @@
                                 <img src="assets/images/optimalevolutionnavbar.png" alt="optimal-evolution-logo">
                             </div>
                             <ul class="list-inline m-top-30">
-                                <li>- <a href=""><i class="fab fa-facebook"></i></a></li>
-                                <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                                <li><a href=""><i class="fab fa-twitter"></i></a></li>
-                                <li><a href=""><i class="fab fa-linkedin"></i></a> -</li>
+                                <li>- <a target="_blank" href="https://www.facebook.com/youroptimalevolution"><i
+                                            class="fab fa-facebook"></i></a></li>
+                                <li><a target="_blank" href="https://www.instagram.com/optimal.evolution/"><i
+                                            class="fab fa-instagram"></i></a> -</li>
                             </ul>
 
                         </div>
