--- a/pages/service-distance.html
+++ b/pages/service-distance.html
@@ -131,7 +131,7 @@
                                         <li><i class="fas  fa-angle-right"></i> 3 Months: $250/month</li>
                                     </ul>
                                     <div class="business_btn m-top-50">
-                                        <a href="" class="btn btn-default m-top-20">Sign Up!</a>
+                                        <a href="../php/php_index.php" class="btn btn-default m-top-20">Sign Up!</a>
                                     </div>
                                 </div>
                             </div>
