fixed services problem in the navbar for mobile and desktop

--- a/index.html
+++ b/index.html
@@ -185,7 +185,10 @@
             </div>
         </section>
         <!--Desktop Services-->
-        <section id="services" class="business bg-blue roomy-70 desktop-service">
+
+        <div id="services"></div>
+
+        <section class="business bg-blue roomy-70 desktop-service">
             <div class="business_overlay"></div>
             <div class="container">
                 <div class="row">
@@ -473,7 +476,7 @@
         <section class="product text-center bg-blue mobile-service">
             <div class="container">
                 <div class="main_product roomy-80">
-                    <div id="services" class="head_title text-center fix">
+                    <div class="head_title text-center fix">
                         <h2 class="text-uppercase text-black">Our Services</h2>
                         <h5>(Tap on the service to learn more!)</h5>
                         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
