updated headshot photos

--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
                                         <div class="team_item team_skill">
                                             <div class="team_author">
                                                 <div class="port_img">
-                                                    <img class="coach-img" src="assets/images/nathan-barna-headshot.png"
+                                                    <img class="coach-img" src="assets/images/nathan_img.jpg"
                                                         alt="nathan-barna-headshot" />
                                                 </div>
                                                 <h4>Nathan Barna, HLC, ACSM-CPT</h4>
@@ -719,7 +719,7 @@
                                             <div class="team_author">
                                                 <div class="port_img">
                                                     <img class="coach-img"
-                                                        src="assets/images/taylor-baroth-headshot.png"
+                                                        src="assets/images/taylor_img.jpg"
                                                         alt="taylor-baroth-headshot" />
                                                 </div>
                                                 <h4>Nathan Barna, RN, HLC</h4>
