fixed coaches names, and fixed about us section

--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
                                                         src="assets/images/taylor_img.jpg"
                                                         alt="taylor-baroth-headshot" />
                                                 </div>
-                                                <h4>Nathan Barna, RN, HLC</h4>
+                                                <h4>Taylor Baroth, RN, HLC</h4>
                                                 <p>CEO & Founder</p>
                                                 <p>
                                                     Taylor is a Registered Nurse and a Licensed Holistic Lifestyle
@@ -797,7 +797,7 @@
                     <div class="main_dialogue text-center">
                         <div class="col-md-12">
                             <h3>ABOUT US</h3>
-                            <p>Founded by Nathan Barna and Taylor Baroth, Opimal Evolution was created in response to
+                            <p>Founded by Nathan Barna and Taylor Baroth, Optimal Evolution was created in response to
                                 seeing so many coaches, trainers, therapists, dietitians, and doctors misguiding people
                                 and/or not addressing the root causes of an individual's disease, poor health, or
                                 diminished performance. Through a holistic approach, we teach people how to create
